# debox-pro-tools-gui

./: Makefile.toml  README.md  package.json  pnpm-lock.yaml
apps/: Cargo.toml
apps/admin/: .env  .gitignore  Cargo.toml  README.md  build.rs  config.yaml
apps/admin/api-docs/: openapi.json
apps/admin/bak/: README.md  open_api_doc.rs
apps/admin/src/: main.rs  router.rs  server.rs
apps/crates/app_state/: Cargo.toml
apps/crates/app_state/src/: mobile.rs
apps/crates/axum_context/: Cargo.toml
apps/crates/axum_context/src/: context.rs  error.rs  extractor.rs  extractor2.rs  layer.rs  lib.rs
apps/crates/axum_jwt/: Cargo.toml
apps/crates/axum_jwt/src/: claims.rs  constant.rs  error.rs  layer.rs  lib.rs
apps/crates/axum_middleware/: Cargo.toml  README.md
apps/crates/axum_middleware/src/: constant.rs  cors.rs  empty_wrapper_fn.rs  error.rs  lib.rs
apps/crates/axum_response/: Cargo.toml
apps/crates/axum_response/src/: lib.rs  response.rs  response_err.rs
apps/crates/axum_validator/: Cargo.toml
apps/crates/axum_validator/src/: _query2.rs  error.rs  json.rs  lib.rs  path.rs  query.rs
apps/crates/config/: Cargo.toml
apps/crates/config/src/: app_config.rs  lib.rs  mod.rs  server.rs
apps/crates/core/: README.md
apps/crates/core/database/: Cargo.toml  README.md
apps/crates/core/database/src/: config.rs  curd.rs  lib.rs  mdb.rs  mock.rs  pagination.rs  pool.rs
apps/crates/core/database/src/utils/: mod.rs
apps/crates/core/database/tests/: mock_test.rs  sqlite_test.rs
apps/crates/core/database/tests/common/: mod.rs  role.rs  schem.rs  user.rs
apps/crates/core/entity/: Cargo.toml  README.md
apps/crates/core/entity/src/: lib.rs
apps/crates/core/entity/src/debox/: debox_account.rs  debox_group.rs  mod.rs
apps/crates/core/entity/src/log/: log_api_operation.rs  log_system.rs  log_web.rs  mod.rs
apps/crates/core/entity/src/organization/: department.rs  department_role_rel.rs  mod.rs  position.rs  rank.rs
apps/crates/core/entity/src/permission/: menu.rs  menu_role_rel.rs  mod.rs  openapi.rs  openapi_role_rel.rs  token.rs  token_role_rel.rs
apps/crates/core/entity/src/schedule/: mod.rs  schedule_event_log.rs  schedule_job.rs  schedule_status_log.rs
apps/crates/core/entity/src/system/: config.rs  dict_data.rs  dict_dimension.rs  file_resource.rs  image_captcha.rs  mod.rs
apps/crates/core/entity/src/template/: mod.rs  template.rs
apps/crates/core/entity/src/user/: blockchain_wallet.rs  email.rs  location.rs  member_level.rs  mod.rs  phone.rs  role.rs  user_base.rs  user_login_log.rs  (+2 more)
apps/crates/core/err_code/: Cargo.toml
apps/crates/core/err_code/src/: error.rs  error_msg.rs  into_error_msg.rs  lib.rs
apps/crates/core/inject/: Cargo.toml
apps/crates/core/inject/src/: lib.rs
apps/crates/core/jwt/: Cargo.toml
apps/crates/core/jwt/src/: lib.rs
apps/crates/core/logger/: .gitignore  Cargo.toml  README.md
apps/crates/core/logger/examples/: logger.rs
apps/crates/core/logger/src/: config.rs  dao.rs  lib.rs
apps/crates/core/migration/: .env  Cargo.toml
apps/crates/core/migration/examples/: migration.rs
apps/crates/core/migration/src/: lib.rs  m20230210_145453_create_app_template.rs  m20230617_084425_create_log_api_operation.rs  m20230617_084425_create_log_log_web.rs  m20230617_084425_create_log_system.rs  m20230617_084425_create_log_user_login.rs  m20240218_145453_create_org_department.rs  m20240218_145453_create_org_department_role_rel.rs  m20240218_145453_create_org_position.rs  m20240218_145453_create_org_rank.rs  m20240218_145453_create_perm_menu.rs  m20240218_145453_create_perm_menu_role_rel.rs  m20240218_145453_create_perm_openapi.rs  m20240218_145453_create_perm_openapi_role_rel.rs  m20240218_145453_create_perm_token.rs  m20240218_145453_create_perm_token_role_rel.rs  m20240218_145453_create_user_base.rs  m20240218_145453_create_user_blockchain_wallet.rs  m20240218_145453_create_user_email.rs  m20240218_145453_create_user_location.rs  m20240218_145453_create_user_member_level.rs  m20240218_145453_create_user_phone.rs  m20240218_145453_create_user_role.rs  m20240218_145453_create_user_role_rel.rs  m20240218_161916_create_sys_config.rs  m20240218_161916_create_sys_dict_data.rs  m20240218_161916_create_sys_dict_dimension.rs  m20240218_161916_create_sys_image_captcha.rs  m20240218_161916_create_sys_image_resource.rs  m20240415_161916_create_schedule_event_log.rs  m20240415_161916_create_schedule_job.rs  m20240415_161916_create_schedule_status_log.rs  m20251020_145453_create_debox_account.rs  m20251020_145453_create_debox_group.rs  utils.rs
apps/crates/core/requests/: Cargo.toml
apps/crates/core/requests/src/: error.rs  lib.rs
apps/crates/core/utils/: Cargo.toml  README.md
apps/crates/core/utils/src/: asset.rs  browser.rs  captcha.rs  crypto.rs  error.rs  file.rs  json.rs  lib.rs  time.rs
apps/crates/service_hub/: Cargo.toml  README.md
apps/crates/service_hub/auth/: Cargo.toml
apps/crates/service_hub/auth/src/: lib.rs
apps/crates/service_hub/comfyui/: Cargo.toml
apps/crates/service_hub/comfyui/src/: lib.rs
apps/crates/service_hub/debox/: Cargo.toml  README.md
apps/crates/service_hub/debox/src/: lib.rs
apps/crates/service_hub/log/: Cargo.toml
apps/crates/service_hub/log/src/: lib.rs
apps/crates/service_hub/src/: lib.rs
apps/crates/service_hub/system/: Cargo.toml
apps/crates/service_hub/system/src/: constant.rs  lib.rs
apps/crates/service_hub/user/: Cargo.toml
apps/crates/service_hub/user/src/: cached.rs  lib.rs
apps/crates/state/: Cargo.toml
apps/crates/state/src/: lib.rs  mobile.rs
apps/mobile/: .gitignore  Cargo.toml  README.md  config.yaml  tauri.conf.json  tauri.conf.json5
apps/mobile/assets/: upload-keystore.jks
apps/mobile/capabilities/: default.json
apps/mobile/icons/: icon.icns
apps/mobile/src/: lib.rs  main.rs  server.rs  setup.rs
apps/mobile/src/config/: env.rs  mod.rs  server.rs
apps/mobile/src/dto/: mod.rs
apps/mobile/src/middleware/: mod.rs
apps/mobile/src/router/: axum_router.rs  mod.rs  tauri.rs  tauri_router.rs
apps/mobile/src/utils/: app_dir.rs  mod.rs
(+289 files in other folders)
