[workspace]
resolver = "2"
members = [
    # 核心组件
    "crates/core/err_code",
    "crates/core/database",
    "crates/core/entity",
    "crates/core/migration",
    "crates/core/logger",
    "crates/core/inject",

    "crates/state",
    "crates/service_hub",

    # app 应用
    "mobile",
]

[workspace.dependencies]
# 本地组件
err_code = { path = "crates/core/err_code" }
database = { path = "crates/core/database" }
entity = { path = "crates/core/entity" }
migration = { path = "crates/core/migration" }
axum_response = { path = "crates/axum_response" }
axum_validator = { path = "crates/axum_validator" }
debox-pro-rs = { git = "https://github.com/silent-rain/debox-pro-rs.git" }


# Inject 依赖注入
inject = { path = "crates/core/inject" }
nject = "0.4"

# Tauri
tauri = "2.9"
tauri-build = "2.5"
tauri-plugin-opener = "2.5"
tauri-plugin-shell = "2.3"
tauri-plugin-websocket = "2.4"
tauri-plugin-log = "2.7"
tauri-plugin-fs = "2.4"
tauri-plugin-http = "2.5"
tauri-plugin-notification = "2.3"

# 服务框架
axum = "0.8"
axum-streams = "0.23"
axum_typed_multipart = "0.16"
tower-http = "0.6"
validator = "0.20"
validator_derive = "0.20"
mime = "0.3"                  # mime type
infer = "0.19"                # mime


# 异步相关
async-std = "1.13"
tokio = "1.42"
tokio-stream = "0.1"
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1"


# ORM
sea-orm = "1.1"
sea-orm-migration = "1.1"
sqlx = "0.8"


# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 工具库
clap = "4.5"
toml = "0.9"
serde_json = "1.0"
serde = "1.0"
serde_repr = "0.1"
serde_urlencoded = "0.7"
reqwest = "0.12"
uuid = "1.12"
base64 = "0.22"
regex = "1.12"
chrono = "0.4"
rust_decimal = "1.36"
jsonwebtoken = "9.3"
time = "0.3"
once_cell = "1.20"
dotenv = "0.15"
tempfile = "3.23"
colored = "3"
captcha-rs = "0.2"
sha2 = "0.10"
rust-embed = "8.5"
uap-rust = "0.0.4"
dirs = "6.0"


# 日志
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-bunyan-formatter = "0.3"
color-eyre = "0.6"
