[package]
name = "admin"
version = "0.1.0"
edition = "2024"

[dependencies]
logger = { path = "../crates/core/logger" }
utils = { path = "../crates/core/utils" }
app_state = { path = "../crates/app_state" }
config = { path = "../crates/config" }


err_code = { workspace = true }
database = { workspace = true }
inject = { workspace = true }
axum_response = { workspace = true }
axum_context = { workspace = true }
axum_jwt = { workspace = true }
axum_middleware = { workspace = true }
service_hub = { workspace = true }


axum = { workspace = true }
axum-streams = { workspace = true, features = ["json", "protobuf", "text"] }
tower = { workspace = true }
tower-http = { workspace = true, features = [
    "fs",
    "trace",
    "cors",
    "limit",
    "compression-gzip",
    "timeout",
    "util",
    "request-id",
] }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
listenfd = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }
rust-embed = { workspace = true, features = [
    # "debug-embed",
    "include-exclude",
    "mime-guess",
] }
colored = { workspace = true }
