[package]
name = "mobile"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "debox_pro_tools_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = ["config-json5"] }

[dependencies]
logger = { path = "../crates/core/logger" }
app_state = { path = "../crates/app_state" }
config = { path = "../crates/config" }
admin = { path = "../admin" }

err_code = { workspace = true }
database = { workspace = true }
nject = { workspace = true }
inject = { workspace = true }
axum_context = { workspace = true }
axum_response = { workspace = true }
service_hub = { workspace = true }

# Tauri 
tauri = { workspace = true, features = ["rustls-tls", "config-json5"] }
tauri-plugin-opener = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-websocket = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-http = { workspace = true, features = ["unsafe-headers"] }
# tauri-plugin-notification = { workspace = true, features = [
#     "windows7-compat", # 支持 Windows 7
# ] }


axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = [
    "fs",
    "trace",
    "cors",
    "limit",
    "compression-gzip",
    "timeout",
    "util",
    "request-id",
] }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_repr = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

log = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "time",
    "local-time",
    "tracing-log",
] }


# Android openssl 支持
# [target.'cfg(any(target_os = "ios", target_os = "android", target_os = "macos"))'.dependencies]
# openssl-sys = { version = "0.9.104", features = ["vendored"] }
