[package]
name = "axum_context"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
