[package]
name = "axum_jwt"
version = "0.1.0"
edition = "2024"


[dependencies]
axum_context = { workspace = true }


axum = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true, features = ["aws_lc_rs"] }
chrono = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
