[package]
name = "axum_middleware"
version = "0.1.0"
edition = "2024"


[dependencies]
err_code = { workspace = true }
axum_response = { workspace = true }
axum_context = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }


futures = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }


[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
