[package]
name = "axum_validator"
version = "0.1.0"
edition = "2024"

[dependencies]
# axum_response = { path = "../axum_response" }

axum = { workspace = true }
validator_derive = { workspace = true }
validator = { workspace = true }
mime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
