[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { workspace = true }
err_code = { workspace = true }
logger = { workspace = true }


serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
