[package]
name = "err_code"
version = "0.1.0"
edition = "2024"

[dependencies]
axum_response = { path = "../../axum_response" }

thiserror = { workspace = true }
anyhow = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true }
