[package]
name = "logger"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "logger"
path = "src/lib.rs"

[dependencies]
err_code = { path = "../err_code" }
entity = { path = "../entity" }
database = { path = "../database" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "time",
    "local-time",
    "tracing-log",
] }
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
color-eyre = { workspace = true }
# tracing-serde = { workspace = true }
# tracing-futures = { workspace = true }

sea-orm = { workspace = true }
time = { workspace = true, features = ["macros"] }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }


[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
once_cell = { workspace = true }
