[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true, features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    # `DATABASE_DRIVER` feature
    "sqlx-mysql",
    "sqlx-sqlite",
] }


[dev-dependencies]
database = { path = "../database" }
entity = { path = "../entity" }
logger = { path = "../logger" }

sqlx = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
colored = { workspace = true }
