[package]
name = "utils"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
captcha-rs = { workspace = true }
sha2 = { workspace = true }
rust-embed = { workspace = true, features = ["mime-guess"] }
uap-rust = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
