[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
user = { path = "../user" }

database = { workspace = true }
entity = { workspace = true }
err_code = { workspace = true }
inject = { workspace = true }
utils = { workspace = true }
axum_response = { workspace = true }

axum = { workspace = true }
axum_context = { workspace = true }
axum_validator = { workspace = true }
axum_jwt = { workspace = true }
# tower-sessions = { workspace = true }
validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
nject = { workspace = true }

log = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
