[package]
name = "debox"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../../core/utils" }

database = { workspace = true }
entity = { workspace = true }
err_code = { workspace = true }
axum_response = { workspace = true }
inject = { workspace = true }

axum = { workspace = true }
axum_validator = { workspace = true }
validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
nject = { workspace = true }

log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
uap-rust = { workspace = true }
thiserror = { workspace = true }
