[package]
name = "debox"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { workspace = true }
entity = { workspace = true }
err_code = { workspace = true }
inject = { workspace = true }
utils = { workspace = true }
axum_response = { workspace = true }
axum_validator = { workspace = true }
axum_context = { workspace = true }
debox-pro-rs = { workspace = true }


axum = { workspace = true }
axum_typed_multipart = { workspace = true }
validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
nject = { workspace = true }

log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
