[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../../core/utils" }


database = { workspace = true }
entity = { workspace = true }
err_code = { workspace = true }
inject = { workspace = true }
axum_response = { workspace = true }
axum_context = { workspace = true }
axum_validator = { workspace = true }


axum = { workspace = true }
validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
nject = { workspace = true }

chrono = { workspace = true }
time = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
